# amazon-template-library

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
include/amz/: bounded_channel.hpp  call.hpp  deferred_reclamation_allocator.hpp  small_spin_mutex.hpp
include/amz/algorithm/: copy_while.hpp  remove_and_copy_if.hpp  remove_range_if.hpp
test/: CMakeLists.txt  call.cpp  small_spin_mutex.cpp  valgrind.supp
test/algorithm/: copy_while.cpp  remove_and_copy_if.cpp  remove_range_if.cpp
test/bounded_channel/: custom_container.cpp  iterator.comparison.cpp  iterator.cpp  pop.cpp  pop_into_optional.cpp  push.cpp  stress.cpp  try_pop.cpp  try_pop_for.cpp  try_pop_until.cpp  try_push.cpp  try_push_for.cpp  try_push_until.cpp
test/deferred_reclamation_allocator/: bounded_allocator.hpp  compare.cpp  ctor.copy.cpp  ctor.move.cpp  deallocate.bad_alloc.cpp  deallocate.delay.cpp  dtor.cpp  dtor.delay.cpp  fancy_pointer.cpp  integration.oom_then_purge.cpp  oom_allocator.hpp  purge.exhaustive.cpp  purge.noexcept.cpp  purge.opportunistic.cpp
test/deferred_reclamation_allocator/interprocess/: 0_setup.cpp  1_allocate.cpp  2_cleanup.cpp  README.md  common.hpp
